--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ li:last-child {
   margin-bottom: 1.5rem;
 }
 
+.email-input:hover {
+  cursor: pointer;
+}
+
 .cta-button {
   border-style: none;
   background-color: #242742;
@@ -90,8 +94,79 @@ li:last-child {
   height: 3.5rem;
 }
 
+.cta-button:hover {
+  cursor: pointer;
+  background: rgb(255, 106, 58);
+  background: linear-gradient(
+    215deg,
+    rgba(255, 106, 58, 1) 0%,
+    rgba(255, 82, 120, 1) 100%
+  );
+}
+
+input::placeholder {
+  padding: 1rem 1.5rem;
+}
+
 /* Section - 2 */
 
 .img-section {
   margin: 1.5rem 1.5rem 1.5rem 0;
+}
+
+.display-none {
+  display: none;
+}
+
+/* SUCCESS MESSAGE */
+
+.success-msg {
+  width: 31.5rem;
+  height: 32.5rem;
+  background-color: white;
+  border-radius: 2.25rem;
+}
+
+.success-container {
+  padding: 3rem 4rem 4.625rem 4rem;
+}
+
+.thank-you-msg {
+  padding: 2.5rem 0 1.5rem 0;
+  font-size: 3.5rem;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+.thank-you-paragraph {
+  color: #242742;
+  font-size: 1rem;
+  line-height: 150%;
+}
+
+.dismiss-btn {
+  margin-top: 2rem;
+  width: 100%;
+  height: 3.5rem;
+  border: none;
+  background-color: #242742;
+  color: white;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 150%;
+  border-radius: 0.5rem;
+}
+
+.dismiss-btn:hover {
+  cursor: pointer;
+  background: rgb(255, 106, 58);
+  background: linear-gradient(
+    215deg,
+    rgba(255, 106, 58, 1) 0%,
+    rgba(255, 82, 120, 1) 100%
+  );
+}
+
+.success-msg-display {
+  display: none;
 }
